# simple-parser

./: .dockerignore  .gitignore  CLAUDE.md  Checklist.md  Dockerfile  Feature_for_openwebui.md  Implemented_Feature.md  Plan.md  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  settings.json
commands/: debug.md  explain.md  refactor.md  review.md  test.md
skills/coding-guidelines/: SKILL.md
src/simple_parser/: api.py  cli.py  md.py  parser_csv.py  parser_doc.py  parser_docx.py  parser_eml.py  parser_ini.py  parser_json.py  parser_md.py  parser_mht.py  parser_pdf.py  parser_ppt.py  parser_pptx.py  parser_toml.py  parser_tsv.py  parser_txt.py  parser_xls.py  parser_xlsx.py  parser_xml.py  parser_yaml.py  rag.py
tests/: benchmark.py  make_fixtures.py  test_api.py  test_cli.py  test_csv.py  test_doc.py  test_docx.py  test_eml.py  test_ini.py  test_json.py  test_md.py  test_md_parser.py  test_mht.py  test_pdf.py  test_ppt.py  test_pptx.py  test_rag.py  test_toml.py  test_tsv.py  test_txt.py  test_xls.py  test_xlsx.py  test_xml.py  test_yaml.py
tests/fixtures/: sample.docx  sample.eml  sample.json  sample.md  sample.mht  sample.pptx  sample.txt  sample.xls  sample.xlsx  sample.xml  sample.yaml  sample_table.pptx
